Added support for defining challenge question.

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -28,6 +28,12 @@
       <version>4.2.1</version>
       <scope>provided</scope>
     </dependency>
+	<dependency>
+      <groupId>org.wso2.carbon</groupId>
+      <artifactId>org.wso2.carbon.identity.mgt</artifactId>
+      <version>4.2.2</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.wso2.carbon</groupId>
       <artifactId>org.wso2.carbon.identity.mgt.stub</artifactId>
