--- a/java/pom.xml
+++ b/java/pom.xml
@@ -40,6 +40,12 @@
       <version>4.2.0</version>
       <scope>provided</scope>
     </dependency>
+	<dependency>
+      <groupId>org.wso2.carbon</groupId>
+      <artifactId>org.wso2.carbon.identity.user.profile.stub</artifactId>
+      <version>4.2.0</version>
+      <scope>provided</scope>
+    </dependency>
     <dependency>
       <groupId>org.wso2.carbon</groupId>
       <artifactId>org.wso2.carbon.claim.mgt.stub</artifactId>
