Update vt-developer-portal-api-utils to 1.0.0

--- a/java/pom.xml
+++ b/java/pom.xml
@@ -141,7 +141,7 @@
     <dependency>
       <groupId>org.vasttrafik.se.common</groupId>
       <artifactId>vt-developer-portal-api-utils</artifactId>
-      <version>1.0.0-SNAPSHOT</version>
+      <version>1.0.0</version>
     </dependency>
   </dependencies>
   <repositories>
