--- a/java/pom.xml
+++ b/java/pom.xml
@@ -15,6 +15,21 @@
   </properties>
   <dependencies>
     <dependency>
+	  <groupId>javax.ws.rs</groupId>
+	  <artifactId>javax.ws.rs-api</artifactId>
+	  <version>2.0.1</version>
+    </dependency>
+	<dependency>
+      <groupId>org.wso2.orbit.com.nimbusds</groupId>
+      <artifactId>nimbus-jose-jwt</artifactId>
+      <version>2.26.1.wso2v3</version>
+    </dependency>
+	<dependency>
+	  <groupId>commons-io</groupId>
+	  <artifactId>commons-io</artifactId>
+	  <version>2.4</version>
+    </dependency>
+    <dependency>
  	  <groupId>org.glassfish.jersey.containers</groupId>
  	  <artifactId>jersey-container-servlet</artifactId>
  	  <version>2.22</version>
@@ -24,6 +39,16 @@
 	  <artifactId>jersey-media-json-jackson</artifactId>
 	  <version>2.22</version>
   	</dependency>
+	<dependency>
+      <groupId>org.glassfish.jersey.ext</groupId>
+      <artifactId>jersey-bean-validation</artifactId>
+      <version>2.22</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.validation</groupId>
+      <artifactId>validation-api</artifactId>
+      <version>1.1.0.Final</version>
+    </dependency>
     <dependency>
       <groupId>org.wso2.carbon</groupId>
       <artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
@@ -139,10 +164,16 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>org.vasttrafik.se.common</groupId>
-      <artifactId>vt-developer-portal-api-utils</artifactId>
-      <version>1.0.0</version>
-    </dependency>
+	  <groupId>org.vasttrafik.se.common</groupId>
+	  <artifactId>vt-developer-portal-api-utils</artifactId>
+	  <version>1.0.0</version>
+		<exclusions>
+		  <exclusion>
+		    <groupId>*</groupId>
+			<artifactId>*</artifactId>
+		  </exclusion>
+		</exclusions>
+	</dependency>
   </dependencies>
   <repositories>
     <repository>
@@ -173,8 +204,8 @@
         <version>3.1</version>
         <configuration>
           <encoding>UTF-8</encoding>
-          <source>1.5</source>
-          <target>1.5</target>
+          <source>1.7</source>
+          <target>1.7</target>
         </configuration>
       </plugin>
       <plugin>
