--- a/java/src/main/webapp/WEB-INF/web.xml
+++ b/java/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,17 @@
     <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
     <init-param>
       <param-name>jersey.config.server.provider.packages</param-name>
-      <param-value>org.vasttrafik.wso2.carbon.identity.api;org.vasttrafik.wso2.carbon.common.api.filter;org.codehaus.jackson.jaxrs</param-value>
+      <!--<param-value>org.vasttrafik.wso2.carbon.identity.api;org.vasttrafik.wso2.carbon.identity.api.exceptions;org.vasttrafik.wso2.carbon.common.api.filter;org.codehaus.jackson.jaxrs</param-value>-->
+	  <param-value>org.vasttrafik.wso2.carbon;org.codehaus.jackson.jaxrs</param-value>
     </init-param>
+	<init-param>
+	  <param-name>com.sun.jersey.api.json.POJOMappingFeature</param-name>
+	  <param-value>true</param-value>
+	</init-param>
+	<init-param>
+	  <param-name>jersey.config.beanValidation.enableOutputValidationErrorEntity.server</param-name>
+	  <param-value>true</param-value>
+	</init-param>
     <load-on-startup>1</load-on-startup>
   </servlet>
   
