--- a/java/pom.xml
+++ b/java/pom.xml
@@ -93,6 +93,11 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
+      <groupId>org.wso2.carbon</groupId>
+      <artifactId>org.wso2.carbon.identity.mgt.stub</artifactId>
+      <version>${identity.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.wso2.carbon.identity</groupId>
       <artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
       <version>${identity.version}</version>
